--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- Image and Bio -->
       <div class="row">
         <div class="col-sm cc">
-	  <img class="portret" src="img/me.jpeg">
+	  <img class="portret" src="img/me.jpg">
 	</div>
         <div class="col-sm-8 cc bio">
 	  
