--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	  <img class="paper-icon" src="img/paper-icon-wcurves.jpg"> </div>
 	<div class="col cc">
 	  <p class="paper-title">Wave Curves: Simulating Lagrangian water waves on dynamically deforming surfaces</p>
-	  <p class="paper-authors"><b>Tomáš Skřivan</b>, A. Söderström, J.Johansson, C.Sprenger, K. Museth, C. Wojtan</p>
+	  <p class="paper-authors"><b>T. Skřivan</b>, A. Söderström, J.Johansson, C.Sprenger, K. Museth, C. Wojtan</p>
 	  <p class="paper-journal">ACM Transactions on Graphics, 2020</p>
 	  <p class="paper-links">
 	    <a href="https://visualcomputing.ist.ac.at/publications/2020/WaveCurves/" class="btn-sm badge-button" role="button">project</a>
