--- a/index.html
+++ b/index.html
@@ -161,15 +161,50 @@
       <!-- Links to GitHub LinkedIn Google Scholar -->
       <div class="row">
         <div class="col cc"></div>
+
 	<div class="col-auto cc">
-	  <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/googlescholar.svg">
+	  <script type="text/javascript" language="javascript">
+	    <!--
+		// Email obfuscator script 2.1 by Tim Williams, University of Arizona
+		// Random encryption key feature coded by Andrew Moulden
+		// This code is freeware provided these four comment lines remain intact
+		// A wizard to generate this code is at http://www.jottings.com/obfuscator/
+		{ coded = "GmB3JSqYKRSG@nRS3Q.TKR"
+		key = "ONG1iJRElxSu5eHBPInwK7pjkV309cQXtChLzUA6q2sZFvmMbDaT4WYr8ygdof"
+		shift=coded.length
+		link=""
+		for (i=0; i<coded.length; i++) {
+		if (key.indexOf(coded.charAt(i))==-1) {
+		ltr = coded.charAt(i)
+		link += (ltr)
+		}
+		else {     
+		ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+		link += (key.charAt(ltr))
+		}
+		}
+		document.write("<a href='mailto:"+link+"'><img class=\"icon\" src=\"https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/gmail.svg\"></a>")
+		}
+		//-->
+	  </script><noscript>Sorry, you need Javascript on to email me.</noscript>
+	</div>
+	
+	<div class="col-auto cc">
+	  <a href="https://scholar.google.com/citations?user=Vw8YoKEAAAAJ&hl=en&oi=ao">
+	    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/googlescholar.svg">
+	  </a>
 	</div>
 	<div class="col-auto cc">
-	  <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/github.svg">
+	  <a href="https://github.com/lecopivo">
+	    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/github.svg">
+	  </a>
 	</div>
 	<div class="col-auto cc">
-	  <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/linkedin.svg">
+	  <a href="https://www.linkedin.com/in/tomas-skrivan-a121b9148/">
+	    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/linkedin.svg">
+	  </a>
 	</div>
+
 	<div class="col cc"></div>
       </div>
 
