update wave curves doi

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
 	      <div class="paper-authors"><b>T. Skřivan</b>, A. Söderström, J.Johansson, C.Sprenger, K. Museth, C. Wojtan</div>
 	      <div class="paper-journal">ACM Transactions on Graphics, 2020</div>
 	      <div class="paper-links">
+		<a href="https://doi.org/10.1145/3386569.3392466" class="btn-sm badge-button" role="button">doi</a>
+		|
 		<a href="https://visualcomputing.ist.ac.at/publications/2020/WaveCurves/" class="btn-sm badge-button" role="button">project page</a>
 	      </div>
 	    </div>
